tests/fixtures/syntaxerrs/broken_class.py

class BrokenClass:
    def __init__
